--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,27 +1,11 @@
-<h1>LISTE DES POKEMONS</h1>
-
-<!-- Appel depuis materialize -->
-<div class="container">
-    <div class="row">
-        <div *ngFor="let pokemon of pokemonList" class="col m4 s6">
-            <div class="card horizontal" pkmnBorderCard>
-                <div class="card-image">
-                    <!-- Affichage d'une image -->
-                    <img [src]="pokemon.picture" alt="">
-                </div>
-                <div class="card-stacked">
-                    <div class="card-content">
-                        <p>{{ pokemon.name }}</p>
-                                                        <!-- pipe date -->
-                        <p><small>{{ pokemon.created | date:"dd/MM/yyyy" }}</small></p>
-
-                        <!-- Ajout des couleur via le pipe type color -->
-                        <span *ngFor="let type of pokemon.types" class="{{ type | pokemonTypeColor }}">
-                            {{ type }}
-                        </span>
-                    </div>
-                </div>
-            </div>
-        </div>
+<!-- En tête -->
+<nav>
+    <div class="nav-wrapper teal">
+        <a href="#" class="brand-logo center">
+            APPLICATION POKEDEX
+        </a>
     </div>
-</div>
+</nav>
+
+<router-outlet></router-outlet>
+
