--- a/src/app/pokemon/list-pokemon/list-pokemon.component.html
+++ b/src/app/pokemon/list-pokemon/list-pokemon.component.html
@@ -23,3 +23,9 @@
         </div>
     </div>
 </div>
+
+<a class="btn-floating btn-large waves-effect wave-ligth red z-depth-3"
+style="position: fixed; bottom: 25px; right: 25px;"
+routerLink="/pokemon/add">
++
+</a>
